refactor, fix tests